feat: update chat.html to use Ollama API endpoint for LLM responses

--- a/www/chat.html
+++ b/www/chat.html
@@ -52,16 +52,25 @@
             messageInput.value = '';
             
             try {
-                const response = await fetch('/api/chat', {
+                const response = await fetch('http://127.0.0.1:11434/api/chat', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ message })
+                    body: JSON.stringify({
+                        model: 'llama2',  // Default model, can be changed
+                        messages: [
+                            {
+                                role: 'user',
+                                content: message
+                            }
+                        ],
+                        stream: false
+                    })
                 });
                 
                 const data = await response.json();
-                addMessage('assistant', data.response);
+                addMessage('assistant', data.message.content);
             } catch (error) {
                 addMessage('assistant', 'Sorry, there was an error processing your message.');
                 console.error('Error:', error);
