refactor: Replace navbar links with server URL input in chat.html

--- a/www/chat.html
+++ b/www/chat.html
@@ -9,9 +9,7 @@
 <body class="chat">
     <div class="navbar">
         <img src="logo.png" alt="Burgonet Gateway Logo">
-        <a href="index.html">Home</a>
-        <a href="tokens.html" style="margin-left: 20px;">Tokens</a>
-        <a href="usage.html" style="margin-left: 20px;">Usage</a>
+        Gateway URL:
         <input type="text" id="server-url" value="http://127.0.0.1:11434" placeholder="Server URL">
     </div>
     <div id="sidebar">
