--- a/www/chat.html
+++ b/www/chat.html
@@ -11,6 +11,7 @@
         <img src="logo.png" alt="Burgonet Gateway Logo">
         Gateway URL:
         <input type="text" id="server-url" value="http://127.0.0.1:11434" placeholder="Server URL">
+        <button id="save-button">Save</button>
     </div>
     <div id="sidebar">
         <h2>Conversations</h2>
@@ -134,6 +135,12 @@
         
         // Initial render
         renderConversations();
+
+        // Save button functionality
+        document.getElementById('save-button').addEventListener('click', () => {
+            saveConversation();
+            alert('Conversation saved!');
+        });
 
         // New Chat button functionality
         document.getElementById('new-chat-button').addEventListener('click', () => {
