refactor: Move inline styles to external CSS and adjust navbar layout

--- a/www/chat.html
+++ b/www/chat.html
@@ -9,11 +9,13 @@
 <body class="chat">
     <div class="navbar">
         <img src="logo.png" alt="Burgonet Gateway Logo">
-        Gateway URL:
+
+        <h5>Gateway URL:</h5>
         <input type="text" id="server-url" value="http://127.0.0.1:11434" placeholder="Server URL">
-        Token:
+        <h5>Token:</h5>
         <input type="text" id="token" class="token-input" placeholder="API Token">
         <button id="save-button">Save</button>
+
     </div>
     <div id="sidebar">
         <h2>Conversations</h2>
