--- a/www/index.html
+++ b/www/index.html
@@ -5,57 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burgonet Gateway</title>
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .navbar {
-            display: flex;
-            align-items: center;
-            padding: 10px 20px;
-            background-color: #f8f9fa;
-            border-bottom: 1px solid #dee2e6;
-        }
-        .navbar img {
-            height: 40px;
-            margin-right: 20px;
-        }
-        .navbar a {
-            text-decoration: none;
-            color: #007bff;
-            font-weight: bold;
-        }
-        .navbar a:hover {
-            text-decoration: underline;
-        }
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: calc(100vh - 60px);
-        }
-        .logo {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .logo img {
-            max-width: 100%;
-            height: auto;
-        }
-        .tokens-button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .tokens-button:hover {
-            background-color: #0056b3;
-        }
+        @import url("style.css");
     </style>
+    <link rel="stylesheet" href="style.css" />
+<!--    <style>-->
+<!--        body {-->
+<!--            margin: 0;-->
+<!--            font-family: Arial, sans-serif;-->
+<!--        }-->
+<!--        .navbar {-->
+<!--            display: flex;-->
+<!--            align-items: center;-->
+<!--            padding: 10px 20px;-->
+<!--            background-color: #f8f9fa;-->
+<!--            border-bottom: 1px solid #dee2e6;-->
+<!--        }-->
+<!--        .navbar img {-->
+<!--            height: 40px;-->
+<!--            margin-right: 20px;-->
+<!--        }-->
+<!--        .navbar a {-->
+<!--            text-decoration: none;-->
+<!--            color: #007bff;-->
+<!--            font-weight: bold;-->
+<!--        }-->
+<!--        .navbar a:hover {-->
+<!--            text-decoration: underline;-->
+<!--        }-->
+<!--        .content {-->
+<!--            display: flex;-->
+<!--            flex-direction: column;-->
+<!--            align-items: center;-->
+<!--            justify-content: center;-->
+<!--            height: calc(100vh - 60px);-->
+<!--        }-->
+<!--        .logo {-->
+<!--            text-align: center;-->
+<!--            margin-bottom: 20px;-->
+<!--        }-->
+
+<!--        .tokens-button {-->
+<!--            padding: 10px 20px;-->
+<!--            background-color: #007bff;-->
+<!--            color: white;-->
+<!--            border: none;-->
+<!--            border-radius: 5px;-->
+<!--            cursor: pointer;-->
+<!--            font-size: 16px;-->
+<!--        }-->
+<!--        .tokens-button:hover {-->
+<!--            background-color: #0056b3;-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body>
     <div class="navbar">
