--- a/www/chat.html
+++ b/www/chat.html
@@ -159,7 +159,8 @@
         async function fetchModels() {
             try {
                 const serverUrl = document.getElementById('server-url').value;
-                const response = await fetch(serverUrl);
+                const response = await fetch(serverUrl, { mode: 'no-cors' });
+                console.log('Response:', response);
                 if (!response.ok) {
                     throw new Error('Failed to fetch models');
                 }
