feat: update chat API endpoint based on selected model

--- a/www/chat.html
+++ b/www/chat.html
@@ -237,7 +237,8 @@
             try {
                 const model = document.getElementById('model-select').value;
                 const serverUrl = document.getElementById('server-url').value;
-                const response = await fetch(`${serverUrl}/api/chat`, {
+                const modelEndpoint = document.getElementById('model-select').value;
+                const response = await fetch(`${serverUrl}${modelEndpoint}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
