fix: update payload structure in chat.html to match required format

--- a/www/chat.html
+++ b/www/chat.html
@@ -247,7 +247,10 @@
                     },
                     body: JSON.stringify({
                         model: model,
-                        messages: conversationHistory,
+                        messages: [{
+                            role: "user",
+                            content: message
+                        }],
                         stream: false
                     })
                 });
