--- a/www/tokens.html
+++ b/www/tokens.html
@@ -167,9 +167,7 @@
                             'Content-Type': 'application/json',
                         },
                         body: JSON.stringify({
-                            tokens: {
-                                [token]: user
-                            }
+                            tokens: [token]
                         })
                     });
 
